[gd_scene load_steps=4 format=3 uid="uid://cmthhju2vi15y"]

[ext_resource type="Script" uid="uid://dhby7uwkntyo3" path="res://models/laser/laser_beam.gd" id="1_gg8fv"]

[sub_resource type="Gradient" id="Gradient_376g1"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b08fd"]
gradient = SubResource("Gradient_376g1")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[node name="LaserBeam" type="Node2D"]
script = ExtResource("1_gg8fv")

[node name="LineOne" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 145, 0)
width = 5.0

[node name="RaycastOne" type="RayCast2D" parent="."]
target_position = Vector2(1400, 0)

[node name="LineTwo" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 145, 0)
width = 5.0

[node name="RaycastTwo" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(1400, 0)

[node name="Sparks" type="CPUParticles2D" parent="."]
amount = 4
lifetime = 0.5
randomness = 0.36
lifetime_randomness = 0.56
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 99.8
initial_velocity_max = 201.74
linear_accel_min = -87.87
linear_accel_max = -46.03

[node name="PointLight2D" type="PointLight2D" parent="Sparks"]
z_index = 500
z_as_relative = false
enabled = false
energy = 3.0
texture = SubResource("GradientTexture2D_b08fd")
texture_scale = 3.0
